@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-08-23T01:04:41Z",
-  "count_outdated" : 5256,
-  "uniques_outdated" : 2880,
+  "timestamp" : "2025-08-23T12:25:33Z",
+  "count_outdated" : 5258,
+  "uniques_outdated" : 2882,
   "count" : 5293,
   "uniques" : 2912,
   "clones" : [
-    {
-      "timestamp": "2025-08-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2025-08-10T00:00:00Z",
       "count": 7,
