@@ -1,12 +1,7 @@
 {
-  "count": 36,
+  "count": 35,
   "uniques": 18,
   "clones": [
-    {
-      "timestamp": "2025-08-09T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-08-10T00:00:00Z",
       "count": 7,
